[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenith"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "bczsalba", email = "bczsalba@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["gunmetal"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/zenith#readme"
Issues = "https://github.com/unknown/zenith/issues"
Source = "https://github.com/unknown/zenith"

[tool.hatch.version]
path = "zenith/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=zenith --cov=tests && coverage html"
lint = "pylint zenith"
type = "mypy zenith"
upload = "hatch build && twine upload dist/* && hatch clean"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "zenith/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true

[tool.pylint]
fail-under = 9.9
disable = "fixme"
good-names = ["i", "j", "k", "ex", "Run", "_", "x" ,"y", "fd"]

[tool.isort]
profile = "black"

