[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "sh40-zenith"
description = "A markup language and color palette generators targeting the terminal."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "bczsalba", email = "bczsalba@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["sh40-slate"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/shade40/zenith#readme"
Issues = "https://github.com/shade40/zenith#issues"
Source = "https://github.com/shade40/zenith"

[project.scripts]
zml = "zenith.__main__:command_zml"

[tool.hatch.version]
path = "zenith/__about__.py"

[tool.hatch.build]
include = [
  "zenith/*.py",
  "zenith/py.typed",
  "/tests",
]

[tool.hatch.envs.default]
dependencies = [
  "sh40-slate",
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=zenith --cov=tests && coverage html"
lint = "pylint zenith"
type = "mypy zenith"
upload = "hatch build && twine upload dist/* && hatch clean"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "zenith/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true

[tool.pylint]
fail-under = 9.9
disable = "fixme,missing-module-docstring"
good-names = ["i", "j", "k", "ex", "Run", "_", "x" ,"y", "fd"]

[tool.isort]
profile = "black"

